# KDP-E-Book-Generator

./: .env  .env.example  .gitignore  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.claude/: CLAUDE.md
agents/: ContinuityAgent.ts  CriticAgent.ts  EmotionalEditorAgent.ts  FineTunerAgent.ts  TrendSeoAgent.ts
components/: AuthorProfileModal.tsx  BatchMode.tsx  GenerationSettingsPanel.tsx  KdpAssistantModal.tsx  KdpAutomationBot.tsx  NativeMenuCenter.tsx  NullLibraryLogo.tsx  ProxySettingsModal.tsx  TitleBar.tsx  TokenTelemetryDashboard.tsx  icons.tsx
dist-electron/: main.js  preload.js
docs/: COPILOT_WORKFLOW.md  DEPLOYMENT_ROADMAP.md  IMPLEMENTATION_PLAN.md  WINDOWS11_INSTALLER_PREP_PLAN.md  copilot-github-web-permissions.md
electron/: main.ts  preload.ts
hooks/: useAutoSave.ts
scripts/: generate-branding-assets.mjs
server/: Dockerfile  README.md  automation-worker.ts  declarations.d.ts  market-research-worker.ts  package.json  server.ts  tsconfig.json
services/: aiProvider.ts  aiService.ts  audioService.ts  desktopBridge.ts  epubGenerator.ts  geminiService.ts  kdpAutomationService.ts  llmCache.ts  llmOrchestrator.ts  loreEngine.ts  memoryService.ts  nullProxyService.ts  oauthSetupService.ts  ragService.ts  realMarketService.ts  sceneChunkedGenerator.ts  storageService.ts  thirdPartyServices.ts  tokenEstimator.ts  tokenOptimizer.ts
src/: declarations.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/installer/: EULA.txt  nsis-hooks.nsh
src-tauri/src/: lib.rs
src/tauri/: backend.ts
(+46 files in other folders)
